k8s/apps/tracker/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timetrack
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  tls:
    - secretName: tls-tracker
      hosts:
        - tracker.lly.sh
  rules:
    - host: tracker.lly.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tracker-server
                port:
                  name: http
